--- a/package.json
+++ b/package.json
@@ -82,10 +82,13 @@
 	},
 	"devDependencies": {
 		"@types/node": "^12.12.0",
+		"@types/vscode": "^1.32.0",
 		"@typescript-eslint/eslint-plugin": "^3.0.2",
 		"@typescript-eslint/parser": "^3.0.2",
 		"eslint": "^7.1.0",
-		"typescript": "^4.0.2",
-		"@types/vscode": "^1.32.0"
+		"typescript": "^4.0.2"
+	},
+	"dependencies": {
+		"request-promise": "^4.2.6"
 	}
 }
